src/SDL_bgi.h

void closegraph (void);
int  getch (void);
unsigned int getpixel (int, int);
void initgraph (int *, int *, char *);
int  installuserdriver (char *name, int (*detect)(void));
void outtextxy (int, int, char *);
void putpixel (int, int, int);